End Of Section 2 - API

--- a/StudentAdminPortal.API/StudentAdminPortal.API/appsettings.json
+++ b/StudentAdminPortal.API/StudentAdminPortal.API/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "StudentAdminPortalDb": "server=.;database=StudentAdminPortalDb;Trusted_Connection=true"
+  }
+
+
 }
